fixed heading & description spacing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #mainHeading { 
   margin-top: 1.75%;
-  /* margin-bottom: 3%; */
+  margin-bottom: 1%;
   text-align: center;
 }
 .mainSubHeading {
